fix(core): Fix details panel cutoff at smaller sizes (#4498)

--- a/app/scripts/modules/core/src/presentation/main.less
+++ b/app/scripts/modules/core/src/presentation/main.less
@@ -169,7 +169,7 @@ html {
         width: 210px;
       }
       @media(min-width: 1200px) {
-        width: 240px;
+        width: 230px;
       }
       @media(min-width: 1400px) {
         width: 310px;
